--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -31,6 +31,7 @@
   display: flex;
   align-items: center;
   border-radius: 10px;
+  margin-bottom: 12px;
 }
 
 .sidebarListItem.active,
@@ -40,5 +41,6 @@
 
 .sidebarIcon{
     margin-right: 5px;
+    color: darkblue;
     font-size: 20px !important;
 }
