--- a/src/pages/editCustomer/editCustomer.css
+++ b/src/pages/editCustomer/editCustomer.css
@@ -1,13 +1,13 @@
-.newUser {
+.editCustomer {
     flex: 4;
   }
   
-  .newUserForm {
+  .editCustomerForm {
     display: flex;
     flex-wrap: wrap;
   }
   
-  .newUserItem {
+  .editCustomerItem {
     width: 400px;
     display: flex;
     flex-direction: column;
@@ -15,43 +15,44 @@
     margin-right: 20px;
   }
   
-  .newUserItem > label {
+  .editCustomerItem > label {
     margin-bottom: 10px;
     font-size: 14px;
     font-weight: 600;
     color: rgb(151, 150, 150);
   }
   
-  .newUserItem > input {
+  .editCustomerItem > input {
     height: 20px;
     padding: 10px;
     border: 1px solid gray;
     border-radius: 5px;
   }
   
-  .newUserGender > input {
+  .editCustomerGender > input {
     margin-top: 15px;
   }
   
-  .newUserGender>label{
+  .editCustomerGender>label{
       margin: 10px;
       font-size: 18px;
       color: #555;
   }
   
-  .newUserSelect{
+  .editCustomerSelect{
       height: 40px;
       border-radius: 5px;
   }
   
-  .newUserButton{
-      width: 200px;
-      border: none;
-      background-color: darkblue;
-      color: white;
-      padding: 7px 10px;
-      font-weight: 600;
-      border-radius: 10px;
-      margin-top: 30px;
-      cursor: pointer;
+  .editCustomerButton{
+    width: 138px;
+    border: none;
+    background-color: darkblue;
+    color: white;
+    padding: 7px 10px;
+    font-weight: 600;
+    border-radius: 24px;
+    margin-top: 30px;
+    cursor: pointer;
+    margin-right: 10px;
   }
