--- a/src/pages/Manager/customizedStatement/customStat.css
+++ b/src/pages/Manager/customizedStatement/customStat.css
@@ -1,51 +1,50 @@
-.deposit {
+.customStat {
     flex: 4;
   }
   
-  .depositForm {
-    display: flex;
+  .customStatForm {
+    /* display: flex; */
     flex-wrap: wrap;
   }
   
-  .depositItem {
+  .customStatItem {
     width: 400px;
     display: flex;
     flex-direction: column;
     margin-top: 10px;
     margin-right: 20px;
-    /* flex: 81% 0; */
   }
   
-  .depositItem > label {
+  .customStatItem > label {
     margin-bottom: 10px;
     font-size: 14px;
     font-weight: 600;
     color: rgb(151, 150, 150);
   }
   
-  .depositItem > input {
+  .customStatItem > input {
     height: 20px;
     padding: 10px;
     border: 1px solid gray;
     border-radius: 5px;
   }
   
-  .depositGender > input {
+  .customStatGender > input {
     margin-top: 15px;
   }
   
-  .depositGender>label{
+  .customStatGender>label{
       margin: 10px;
       font-size: 18px;
       color: #555;
   }
   
-  .depositSelect{
+  .customStatSelect{
       height: 40px;
       border-radius: 5px;
   }
   
-  .depositButton{
+  .customStatButton{
       width: 200px;
       border: none;
       background-color: darkblue;
@@ -55,7 +54,4 @@
       border-radius: 10px;
       margin-top: 30px;
       cursor: pointer;
-  }
-  .textAreaD{
-    border-radius: 8px;
   }
